--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,36 +1,34 @@
 version: '3'
 
 services:
-
   database:
-    image: aeonix1992/my_todo_list_db:0
-    environment:
-      POSTGRES_DB: ${POSTGRES_DB}
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+    build:
+      context: ./database
+      dockerfile: Dockerfile
+    restart: always
+    env_file:
+      - .env
     volumes:
       - todo_vol:/var/lib/postgresql/data
     healthcheck:
       test: ["CMD-SHELL", "pg_isready", "-U", "${DJANGO_SUPERUSER_USERNAME}"]
-# pg_isready — это утилита, которая входит в поставку PostgreSQL
-# Предназначена для проверки доступности сервера PostgreSQL
-# Она отправляет запрос на сервер PostgreSQL, чтобы убедиться, что он готов принимать подключения
 
   backend:
     image: aeonix1992/my_todo_list_backend:0
-    environment:
-      PG_HOST: ${PG_HOST}
-      PG_NAME: ${PG_NAME}
-      PG_USER: ${PG_USER}
-      PG_PASSWORD: ${PG_PASSWORD}
+    restart: always
+    env_file:
+      - .env
     depends_on:
       database:
         condition: service_healthy
 
   frontend:
     image: aeonix1992/my_todo_list_frontend:0 
+    restart: always
     ports:
       - 127.0.0.1:80:80
+    env_file:
+      - .env
     depends_on:
       database:
         condition: service_healthy
@@ -39,11 +37,8 @@ services:
 
   backend-migrations:
     image: aeonix1992/my_todo_list_backend:0 
-    environment:
-      PG_HOST: ${PG_HOST}
-      PG_NAME: ${PG_NAME}
-      PG_USER: ${PG_USER}
-      PG_PASSWORD: ${PG_PASSWORD}
+    env_file:
+      - .env
     command: bash -c "make migrate"
     depends_on:
       database:
@@ -53,14 +48,8 @@ services:
 
   backend-superuser:
     image: aeonix1992/my_todo_list_backend:0
-    environment:
-      PG_HOST: ${PG_HOST}
-      PG_NAME: ${PG_NAME}
-      PG_USER: ${PG_USER}
-      PG_PASSWORD: ${PG_PASSWORD}
-      DJANGO_SUPERUSER_USERNAME: ${DJANGO_SUPERUSER_USERNAME}
-      DJANGO_SUPERUSER_PASSWORD: ${DJANGO_SUPERUSER_PASSWORD}
-      DJANGO_SUPERUSER_EMAIL: ${DJANGO_SUPERUSER_EMAIL}
+    env_file:
+      - .env
     command: bash -c "make create-superuser"
     depends_on:
       database:
